--- a/LiveStudio.html
+++ b/LiveStudio.html
@@ -737,15 +737,15 @@
                     
                     <!-- studio-carousel start -->
                     <div class="livestudio-sec1">
-                        <div class="studio-slide-bkg">
+                        <!-- <div class="studio-slide-bkg">
                             <img
                                 src="./images/livestudio/studio-sec1-bkg_x1.png"
                                 srcset="./images/livestudio/studio-sec1-bkg_x1.png 500w, ./images/livestudio/studio-sec1-bkg_x2.png 1000w"
                                 alt=""
                             />
-                        </div>
+                        </div> -->
                         <!-- studio-carousel start -->
-                        <div class="Livestudio-carousel-container"   data-sal="slide-up" data-sal-easing="easeInOutQuad" style="--sal-duration: 1s; --sal-delay:  0.35s;">
+                        <!-- <div class="Livestudio-carousel-container"   data-sal="slide-up" data-sal-easing="easeInOutQuad" style="--sal-duration: 1s; --sal-delay:  0.35s;">
                             <div class="owl-carousel owl-theme" id="studioCarousel">
                                 <div class="room-slide" style="width: 295px;">
                                     <div class="studio-card" id="liveStudio1">
@@ -919,7 +919,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- studio-carousel end -->
                     </div>
                     <!-- studio-carousel end -->
@@ -939,7 +939,7 @@
                                         </div>
                                         <div class="col-12 col-lg-6 large-text" data-sal="slide-up" data-sal-easing="easeInOutQuad" style="--sal-duration: 1s; --sal-delay: 0.15s;">
                                             <div class="d-flex justify-content-center justify-content-lg-start">
-                                                <h1>4,000</h1>
+                                                <h1>8,000</h1>
                                                 <h6 class="lang" key="Highlights_h2"></h6>
                                             </div>
                                             <p class="lang" key="Highlights_p2"></p>
